Add all function except the function about thrnode.

--- a/05/README.html
+++ b/05/README.html
@@ -82,22 +82,22 @@ const int _pos
 <p><input class="task-list-item-checkbox" checked="" disabled="" type="checkbox">    std::vector<T> BFS() const noexcept;</p>
 </li>
 <li class="task-list-item">
-<p><input class="task-list-item-checkbox" disabled="" type="checkbox">    std::string info() const noexcept;</p>
+<p><input class="task-list-item-checkbox" checked="" disabled="" type="checkbox">    std::string info() const noexcept;</p>
 </li>
 <li class="task-list-item">
-<p><input class="task-list-item-checkbox" disabled="" type="checkbox">    std::string print() const noexcept;</p>
+<p><input class="task-list-item-checkbox" checked="" disabled="" type="checkbox">    std::string print() const noexcept;</p>
 </li>
 <li class="task-list-item">
-<p><input class="task-list-item-checkbox" disabled="" type="checkbox">    size_t size() const noexcept;</p>
+<p><input class="task-list-item-checkbox" checked="" disabled="" type="checkbox">    size_t size() const noexcept;</p>
 </li>
 <li class="task-list-item">
-<p><input class="task-list-item-checkbox" disabled="" type="checkbox">    size_t deaph() const noexcept;</p>
+<p><input class="task-list-item-checkbox" checked="" disabled="" type="checkbox">    size_t deaph() const noexcept;</p>
 </li>
 <li class="task-list-item">
-<p><input class="task-list-item-checkbox" disabled="" type="checkbox">    size_t sizeOfLeaf() const noexcept;</p>
+<p><input class="task-list-item-checkbox" checked="" disabled="" type="checkbox">    size_t sizeOfLeaf() const noexcept;</p>
 </li>
 <li class="task-list-item">
-<p><input class="task-list-item-checkbox" disabled="" type="checkbox">    void __CreateTreeByNLRandLNR(
+<p><input class="task-list-item-checkbox" checked="" disabled="" type="checkbox">    void __CreateTreeByNLRandLNR(
 InputIterator firstPre,
 InputIterator lastPre,
 InputIterator firstInorder,
