--- a/06/README.html
+++ b/06/README.html
@@ -25,9 +25,10 @@
     <body class="vscode-body vscode-light">
         <h1 id="第六次上机作业作业题目">第六次上机作业作业题目</h1>
 <h2 id="解压缩程序">解压缩程序</h2>
-<pre><code><code><div>./hzip lock &lt;filename, directory&gt; -o &lt;name.hz&gt;
-./hzip unlock &lt;name.hz&gt; -o &lt;directory&gt;
+<pre><code><code><div>./hzip lock &lt;filename&gt; -o &lt;outputname&gt;
+./hzip unlock &lt;zipped name&gt;
 </div></code></code></pre>
+<h2 id="用孩子兄弟表示法表示中山大学的各个机构">用孩子兄弟表示法表示中山大学的各个机构</h2>
 
     </body>
     </html>
