--- a/README.html
+++ b/README.html
@@ -31,6 +31,7 @@
 <p>第三次作业：<a href="03/README.html">3.md</a></p>
 <p>第四次作业：<a href="04/README.html">4.md</a></p>
 <p>第五次作业：<a href="05/README.html">5.md</a></p>
+<p>第六次作业：<a href="06/README.html">6.md</a></p>
 
     </body>
     </html>
