添加了第六次书面作业

--- a/README.html
+++ b/README.html
@@ -2,7 +2,7 @@
     <html>
     <head>
         <meta charset="UTF-8">
-        <title>Homework</title>
+        <title>Homework   &lsqb;&excl;&lsqb;State-of-the-art Shitcode&rsqb;&lpar;https&colon;&sol;&sol;img&period;shields&period;io&sol;static&sol;v1&quest;label&equals;State-of-the-art&amp;message&equals;Shitcode&amp;color&equals;7B5804&rpar;&rsqb;&lpar;https&colon;&sol;&sol;github&period;com&sol;trekhleb&sol;state-of-the-art-shitcode&rpar;</title>
         <style>
 </style>
         
@@ -23,15 +23,16 @@
         
     </head>
     <body class="vscode-body vscode-light">
-        <h1 id="homework">Homework</h1>
+        <h1 id="homework---state-of-the-art-shitcode">Homework   <a href="https://github.com/trekhleb/state-of-the-art-shitcode"><img src="https://img.shields.io/static/v1?label=State-of-the-art&amp;message=Shitcode&amp;color=7B5804" alt="State-of-the-art Shitcode"></a></h1>
 <p>这是为了提交数据结构与算法作业。
 有关程序列表，参照每一个子文件夹下的 <code>README.md</code>文件。</p>
-<p>第一次作业：<a href="01/README.html">1.md</a></p>
-<p>第二次作业：<a href="02/README.html">2.md</a></p>
-<p>第三次作业：<a href="03/README.html">3.md</a></p>
-<p>第四次作业：<a href="04/README.html">4.md</a></p>
-<p>第五次作业：<a href="05/README.html">5.md</a></p>
-<p>第六次作业：<a href="06/README.html">6.md</a></p>
+<h2 id="作业列表的快速跳转">作业列表的快速跳转</h2>
+<p><a href="01/README.html">第一次作业</a></p>
+<p><a href="02/README.html">第二次作业</a></p>
+<p><a href="03/README.html">第三次作业</a></p>
+<p><a href="04/README.html">第四次作业</a></p>
+<p><a href="05/README.html">第五次作业</a></p>
+<p><a href="06/README.html">第六次作业</a></p>
 
     </body>
     </html>
